# appwrite

./: .dockerignore  .env.example  .gitignore  AUTO_EMAIL_EXTRACTION.md  CAMPAIGN_SETUP_GUIDE.py  COMMANDS_RUNBOOK.md  CONNECTION_STABILITY_FIX.md  DATA_SOURCES.md  DEPLOYMENT.md  DOCUMENTATION_GUIDE.md  Dockerfile  EMAIL_ALIASES.md  EMAIL_IP_SOLUTIONS.md  EMAIL_TRACKING.md  EXTRACTION_GUIDE.py  FREE_CAMPAIGN_SETUP.md  FREE_GEOTARGETING.md  FREE_GEO_TARGETING_GUIDE.py  HOW_TO_EXTRACT_EMAILS.py  NETWORK_SCRAPER_README.md  QUICK_REFERENCE.md  QUICK_START.md  QUICK_START_EXTRACTION.py  QUICK_START_SOURCES.py  README.md  README_DNS_SETUP.md  TECHNICAL_ARCHITECTURE.md  TRY_EXTRACTION.md  USER_MANUAL.md  appwrite(1).code-workspace  batch-extract.sh  build.sh  check_sent_status.py  connection_stability.py  contacts.csv.example  convert-to-pdf.sh  create-commands-runbook-pdf.sh  devnavigator.py  dns_setup.py  email_notifier.py  (+32 more)
.kilo/: kilo.jsonc
ai-providers-config/: .env.example  .gitignore  KILO_GUIDE.md  README.md  client.py  kilo_advanced.py  kilo_integrations.py  providers.py  requirements.txt  secret_store.py  setup.sh
api/: payments.py
appwrite/: .gitignore  README.md  admin_user_manager.py  loader.html  recmp3.html  render_network_toolkit.py  run_server.bat  server.js  settings.json  setup_db.py  simple_web_audio_mixing_mastering_track (5) - Copia.html  sito.txt  task.json 
backend/: __init__.py  admin_user_manager.py  contact.html  (+10 more)
cpp_crawler/: CMakeLists.txt
cpp_crawler/include/: email_sender.h  emailsender.h
cpp_crawler/src/: email_sender.cpp  main.cpp
(+204 files in other folders)
